# py-tricks-and-tips

./: .gitignore  LICENSE  README.rst  pyproject.toml
py_tricks_and_tips/: basics.py  basics.rst
py_tricks_and_tips/data_wrangler/: README.rst  convert_extruder_data.py  extruder data.xlsx  locations.py  models.py
tests/: test_py_tricks_and_tips.py
tests/data_wrangler/: test_data_wrangler.py
