[tool.poetry]
name = "py-tricks-and-tips"
version = "0.1.0"
description = "Python Tricks and Tips"
authors = ["John te Bokkel <tanj.tanj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
